next line issue fixed

--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
                     <button class="early"><i class="fa-sharp fa-solid fa-signal-stream"></i>Early Access Now Open</button>
                     <h1 id="main1">Structured Thinking,</h1>
                     <h1 id="main2">Not Just Note-Taking.</h1>
-                    <p>A private space to store notes, links, and learning summaries — designed to</p><p>
+                    <p>A private space to store notes, links, and learning summaries — designed to<br>
 help you think clearly, connect ideas, and turn learning into long-term knowledge.</p>
                         <div class="banner-button">
                             <div>
@@ -62,23 +62,22 @@ help you think clearly, connect ideas, and turn learning into long-term knowledg
         <div class="parent">
                 <div class="card"><img src="/first-assignment/assets/Vector.png" alt="">
                     <h2> Scattered Notes</h2>
-                <p>Your ideas live in 10 different apps,</p> 
-                <p>none of them connected.</p>
+                <p>Your ideas live in 10 different apps,<br>none of them connected.</p>
                 </div>
             <div class="card">
                 <img src="/first-assignment/assets/Bookmarks.png" alt="">
                 <h2>Bookmark Overload</h2>
-                <p>Hundreds of saved links you'll never</p><p>revisit or remember.</p>
+                <p>Hundreds of saved links you'll never<br>revisit or remember.</p>
             </div>
             <div class="card">
                 <img src="/first-assignment/assets/Brain.png" alt="">
                 <h2>No Idea Connections</h2>
-                <p>Insights stay isolated, never</p> <p>building into bigger understanding.</p>
+                <p>Insights stay isolated, never<br> building into bigger understanding.</p>
             </div>
             <div class="card-four">
                 <img src="/first-assignment/assets/Info.png" alt="">
                 <h2>Forgetting What You Learned</h2>
-                <p>Knowledge fades because there's</p><p> no system to retain it.</p>
+                <p>Knowledge fades because there's no system to retain it.</p>
             </div>
         </div>
     </section>
