folder name changed

--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@ help you think clearly, connect ideas, and turn learning into long-term knowledg
                         <div class="banner-button">
                             <div>
                             <button class="button-1"><h6>Start Building Your Vault</h6> 
-                                <img src="/first-assignment/assets/ArrowRight.png" alt=""></button>
+                                <img src="/assets/ArrowRight.png" alt=""></button>
                             </div>
                             <div>
                             <button class="button-2"><i class="fa-solid fa-play"></i> See How It Works</button>
@@ -60,22 +60,22 @@ help you think clearly, connect ideas, and turn learning into long-term knowledg
             <p>You're not bad at learning. Your tools just weren't built for how knowledge actually works.</p>
         </div>
         <div class="parent">
-                <div class="card"><img src="/first-assignment/assets/Vector.png" alt="">
+                <div class="card"><img src="/assets/Vector.png" alt="">
                     <h2> Scattered Notes</h2>
                 <p>Your ideas live in 10 different apps,<br>none of them connected.</p>
                 </div>
             <div class="card">
-                <img src="/first-assignment/assets/Bookmarks.png" alt="">
+                <img src="/assets/Bookmarks.png" alt="">
                 <h2>Bookmark Overload</h2>
                 <p>Hundreds of saved links you'll never<br>revisit or remember.</p>
             </div>
             <div class="card">
-                <img src="/first-assignment/assets/Brain.png" alt="">
+                <img src="/assets/Brain.png" alt="">
                 <h2>No Idea Connections</h2>
                 <p>Insights stay isolated, never<br> building into bigger understanding.</p>
             </div>
             <div class="card-four">
-                <img src="/first-assignment/assets/Info.png" alt="">
+                <img src="/assets/Info.png" alt="">
                 <h2>Forgetting What You Learned</h2>
                 <p>Knowledge fades because there's no system to retain it.</p>
             </div>
@@ -85,7 +85,7 @@ help you think clearly, connect ideas, and turn learning into long-term knowledg
     <section class="last-banner-section">
         <div class="last-banner-first-div">
             <div class="last-banner-image">
-            <img src="/first-assignment/assets/knowledge.png" alt="">
+            <img src="/assets/knowledge.png" alt="">
         </div>
         <div class="last-banner-content">
             <h4>THE SOLUTION</h4>
@@ -97,10 +97,10 @@ help you think clearly, connect ideas, and turn learning into long-term knowledg
                 It's a thinking environment where every note, link, and summary
                 becomes part of an interconnected web of understanding.
             </p>
-            <h5><img src="/first-assignment/assets/CheckCircle.png" alt="">Capture ideas with structure built-in from day one</h5>
-            <h5><img src="/first-assignment/assets/CheckCircle.png" alt="">Connect related concepts automatically as you write</h5>
-            <h5><img src="/first-assignment/assets/CheckCircle.png" alt="">Build lasting knowledge through reflection prompts</h5>
-            <h5><img src="/first-assignment/assets/CheckCircle.png" alt="">Find anything instantly with semantic search</h5>
+            <h5><img src="/assets/CheckCircle.png" alt="">Capture ideas with structure built-in from day one</h5>
+            <h5><img src="/assets/CheckCircle.png" alt="">Connect related concepts automatically as you write</h5>
+            <h5><img src="/assets/CheckCircle.png" alt="">Build lasting knowledge through reflection prompts</h5>
+            <h5><img src="/assets/CheckCircle.png" alt="">Find anything instantly with semantic search</h5>
         </div>
         </div>
         
@@ -110,7 +110,7 @@ help you think clearly, connect ideas, and turn learning into long-term knowledg
         <div class="last-content">
         <h1>Ready To Think More Clearly?</h1>
         <p>Join thousands of learners who are building their personal knowledge vaults.<br>Start free, no credit card required.</p>
-        <button class="last-button">Get Early Access<img src="/first-assignment/assets/ArrowRight.png" alt=""></button>
+        <button class="last-button">Get Early Access<img src="/assets/ArrowRight.png" alt=""></button>
         <p>Free during early access • No credit card needed</p>
         </div>
 
@@ -118,7 +118,7 @@ help you think clearly, connect ideas, and turn learning into long-term knowledg
 
     <footer class="footer-main">
         <div class="footer-content">
-            <img src="/first-assignment/assets/logo-footer.png" alt="">
+            <img src="/assets/logo-footer.png" alt="">
              <div class="footer-social-contact">
             <p>Social Links</p>
             <div class="social-logo">
