--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     <header>
         <nav class="navbar">
                  <div class="nav-logo">
-                <img src="/first-assignment/assets/logo-navbar.png" alt="">
+                <img src="/assets/logo-navbar.png" alt="">
                  </div>
                  <!-- <div class="id">
                      <ul> 
