--- a/index.html
+++ b/index.html
@@ -97,10 +97,13 @@ help you think clearly, connect ideas, and turn learning into long-term knowledg
                 It's a thinking environment where every note, link, and summary
                 becomes part of an interconnected web of understanding.
             </p>
-            <h5><img src="/assets/CheckCircle.png" alt="">Capture ideas with structure built-in from day one</h5>
+            <div class="checkcircle">
+                <h5><img src="/assets/CheckCircle.png" alt="">Capture ideas with structure built-in from day one</h5>
             <h5><img src="/assets/CheckCircle.png" alt="">Connect related concepts automatically as you write</h5>
             <h5><img src="/assets/CheckCircle.png" alt="">Build lasting knowledge through reflection prompts</h5>
             <h5><img src="/assets/CheckCircle.png" alt="">Find anything instantly with semantic search</h5>
+            </div>
+            
         </div>
         </div>
         
